--- a/lang/en.json
+++ b/lang/en.json
@@ -400,14 +400,21 @@
     "youtube": "\/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
     "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M.",
     "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to th hammer!",
+    "LokiNotClose": "\/me @%%NAME%%, all actions have consequences...yet you wish for me to play a trick on someone while being immune to consequences yourself? stop being a coward! join the waitlist!",
     "odinNotClose": "\/me @%%NAME%%, odin laughs at you! You dare to yield gungnir while not in the waitlist yourself? Absolutely UNWORTHY! https://hydra-media.cursecdn.com/smite.gamepedia.com/6/67/Vox_God_Odin_Laugh_a.ogg",
     "odinNotPossible": "\/me  @%%NAME%% is immune to the effects of Gungnir as this person is not in the waitlist. COWARD! HAHAHA",
+    "lokiNotPossible": "\/me  Loki yawns! Loki cannot play a trick on @%%NAME%% as this person is not in the waitlist!",
     "thorcd": "\/me @%%NAME%% you can try to lift th hammer in %%TIME%% minutes. https://hydra-media.cursecdn.com/smite.gamepedia.com/c/ce/Thor_Kill_Streak_2.ogg",
     "odincd": "\/me @%%NAME%% Odin may try to listen to your begging in %%TIME%% minutes.",
+    "lokicd": "\/me @%%NAME%% Loki appears infront of you and stares you in the eye! Loki then laughs and vanishes! He may re-appear again to you in %%TIME%% minutes.",
     "thorWorthy": "\/me @%%NAME%% you're worthy of th hammer :hammer:, congratulations!",
+    "lokiWorthy": "\/me @%%NAME%% loki is amused by your trick request! Loki plays a trick on an unsuspecting @%%NAMET%%!",
     "odinWorthy": "\/me @%%NAME%% ODIN SEES YOU AS WORTHY, AND ALLOWS YOU ACCESS TO HIS WEAPON GUNGNIR! congratulations!",
     "noOdin": "\/me You need a target first in order to use Gungnir.",
+    "noLoki": "\/me You need to give Loki a name if you wish for Loki to play a trick on that person",
     "whoOdin": "\/me WHO? %%NAME%% IS NOT HERE. YOU DISAPPOINT ODIN.",
+    "whoLoki": "\/me Are you trying to play a trick on Loki? %%NAME%% is not here.",
     "odinNotWorthy": "\/me @%%NAME%%, YOU ARE UNWORTHY OF TH MIGHT OF GUNGNIR! http://vocaroo.com/i/s1aKwhMdoKMT",
+    "lokiNotWorthy": "\/me @%%NAME%% Loki decided to play a trick on YOU instead! Hahahaha!",
     "thorNotWorthy": "\/me @%%NAME%% you're not worthy of th hammer."
 }
