--- a/lang/en.json
+++ b/lang/en.json
@@ -198,9 +198,13 @@
         "I am art http://i.imgur.com/nYK8lye.jpg",
         "MOLNAR WILL BE BACK http://i.imgur.com/ROimk5X.jpg",
         "MOLNAR TAKES PITY ON LOW ELO TRASH BROZE KITTIES http://i.imgur.com/bVbHuB9.jpg",
+        ":dagger_knife: MOLNAR WILL TEST YOU IN BATTLE http://i.imgur.com/39JU4tN.jpg  :dagger_knife: ",
         "PEN PINEAPPLE MOLNAR PEN http://i.imgur.com/R2DSUWs.jpg",
         "MOLNAR WILL FIGHT YOU http://i.imgur.com/2ENzA2A.jpg",
         "MOLNAR WILL SNIPE YOU http://i.imgur.com/68i7DkU.jpg",
+        ":church: oh holy one http://i.imgur.com/xMSlYmV.jpg :church:",
+        ":airplane: http://i.imgur.com/oQJUmGR.jpg :airplane: ",
+        "MOLNAR WIFE? http://i.imgur.com/HXBrUgV.jpg",
         "KURI KURI http://i.imgur.com/BDxIuo6.jpg",
         "PRAISE MOLNAR http://i.imgur.com/XTiQMYv.png",
         "AXAXAXAXAXAXAXAXA MOLNAR LAUGHS AT YOU http://i.imgur.com/0EeucA8.jpg",
